<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_recipe"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/fragment_recipe_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_title"/>

        <TextView
            android:id="@+id/fragment_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/field_name"
            android:textSize="24sp"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_subtitle"/>

        <TextView
            android:id="@+id/fragment_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/field_ingredients"
            android:textSize="24sp"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_name"/>

        <TextView
            android:id="@+id/fragment_recipe_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/field_cuisine_type"
            android:textSize="24sp"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_ingredients" />

        <TextView
            android:id="@+id/fragment_recipe_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/field_rating"
            android:textSize="24sp"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_type" />

        <TextView
            android:id="@+id/fragment_recipe_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/field_content"
            android:textSize="24sp"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_rating" />

        <LinearLayout
            android:id="@+id/fragment_recipe_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_content">

            <ImageButton
                android:id="@+id/fragment_recipe_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/previous_button"
                android:layout_marginEnd="20dp"/>

            <ImageButton
                android:id="@+id/fragment_recipe_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/next_button"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/fragment_recipe_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/save_recipe"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_buttons"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
